5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1679_1101.log
== TEST (2019-04-19 22:32:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalaçao")

if(tipo == "R" ):
	elif(and consumo > 500):
		a = consumo * 0.44
else:
	a = consumo * 0.65
		
-- ERROR:
File "XXXX", line 9
    elif(and consumo > 500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:33:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalaçao")

if(tipo == "R" ):
elif(consumo <= 500):
	a = consumo * 0.44
else:
	a = consumo * 0.65
	
print(a)
-- ERROR:
File "XXXX", line 9
    elif(consumo <= 500):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:33:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalaçao")

if(tipo == "R" ):
	elif(consumo <= 500):
		a = consumo * 0.44
else:
	a = consumo * 0.65
	
print(a)
-- ERROR:
File "XXXX", line 9
    elif(consumo <= 500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:35:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalaçao")

if(tipo == "R" or tipo == "I" or tipo == "C"):
	if(consumo <= 500):
		a = consumo * 0.44
	elif(consumo > 500):
		a = consumo * 0.65
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:35:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalaçao")

if(tipo == "R" or tipo == "I" or tipo == "C"):
	if(consumo <= 500):
		a = consumo * 0.44
	elif(consumo > 500):
		a = consumo * 0.65
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:35:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalaçao")

if(tipo == "R" or tipo == "I" or tipo == "C"):
	if(consumo <= 500):
		a = consumo * 0.44
	elif(consumo > 500):
		a = consumo * 0.65
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:36:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao")

if(tipo == "R" or tipo == "I" or tipo == "C"):
	if(consumo <= 500):
		a = consumo * 0.44
	elif(consumo > 500):
		a = consumo * 0.65
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:37:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao")

if(tipo == "R" or tipo == "I" or tipo == "C"):
	if(consumo <= 500):
		a = consumo * 0.44
	elif(consumo > 500):
		a = consumo * 0.65
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:41:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao")

if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo = "R" and consumo <= 500):
		a = consumo * 0.44
	elif(tipo = "R" and consumo > 500):
		a = consumo * 0.65
	elif(tipo = "I" and consumo <= 1000):
		a = consumo * 0.55
else:
	a = "Invalido"

	
print(a)
-- ERROR:
File "XXXX", line 9
    if(tipo = "R" and consumo <= 500):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:41:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao")

if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		a = consumo * 0.44
	elif(tipo == "R" and consumo > 500):
		a = consumo * 0.65
	elif(tipo == "I" and consumo <= 1000):
		a = consumo * 0.55
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:44:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")

if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		a = ("Entrada:",consumo * 0.44,"kWh e tipo", tipo)
	elif(tipo == "R" and consumo > 500):
		a = consumo * 0.65
	elif(tipo == "C" and consumo <= 1000):
		a = consumo * 0.55
	elif(tipo == "C" and consumo > 1000):
		a = consumo * 0.60
	elif(tipo == "I" and consumo <= 5000):
		a = consumo * 0.55
	elif(tipo == "I" and consumo > 5000):
		a = consumo * 0.60
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:45:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")

if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		a = ("Entrada:",consumo * 0.44,"kWh e tipo" + tipo)
	elif(tipo == "R" and consumo > 500):
		a = consumo * 0.65
	elif(tipo == "C" and consumo <= 1000):
		a = consumo * 0.55
	elif(tipo == "C" and consumo > 1000):
		a = consumo * 0.60
	elif(tipo == "I" and consumo <= 5000):
		a = consumo * 0.55
	elif(tipo == "I" and consumo > 5000):
		a = consumo * 0.60
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:47:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")

a1 = consumo * 0.44
a2 = consumo * 0.65
a3 = consumo * 0.55
a4 = consumo * 0.60
if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		a = ("Entrada:",a1,"kWh e tipo ",tipo)
	elif(tipo == "R" and consumo > 500):
		a = consumo * 0.65
	elif(tipo == "C" and consumo <= 1000):
		a = consumo * 0.55
	elif(tipo == "C" and consumo > 1000):
		a = consumo * 0.60
	elif(tipo == "I" and consumo <= 5000):
		a = consumo * 0.55
	elif(tipo == "I" and consumo > 5000):
		a = consumo * 0.60
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:47:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")

a1 = consumo * 0.44
a2 = consumo * 0.65
a3 = consumo * 0.55
a4 = consumo * 0.60
if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		a = ("Entrada:"+a1+" kWh e tipo " + tipo)
	elif(tipo == "R" and consumo > 500):
		a = consumo * 0.65
	elif(tipo == "C" and consumo <= 1000):
		a = consumo * 0.55
	elif(tipo == "C" and consumo > 1000):
		a = consumo * 0.60
	elif(tipo == "I" and consumo <= 5000):
		a = consumo * 0.55
	elif(tipo == "I" and consumo > 5000):
		a = consumo * 0.60
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:48:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")

if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		print("Entrada:",consumo * 0.44,"kWh e tipo ", tipo)
	elif(tipo == "R" and consumo > 500):
		a = consumo * 0.65
	elif(tipo == "C" and consumo <= 1000):
		a = consumo * 0.55
	elif(tipo == "C" and consumo > 1000):
		a = consumo * 0.60
	elif(tipo == "I" and consumo <= 5000):
		a = consumo * 0.55
	elif(tipo == "I" and consumo > 5000):
		a = consumo * 0.60
else:
	a = "Invalido"

	
print(a)
-- OUTPUT:
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:49:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")

if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		print("Entrada:",consumo * 0.44,"kWh e tipo ", tipo)
	elif(tipo == "R" and consumo > 500):
		a = consumo * 0.65
	elif(tipo == "C" and consumo <= 1000):
		a = consumo * 0.55
	elif(tipo == "C" and consumo > 1000):
		a = consumo * 0.60
	elif(tipo == "I" and consumo <= 5000):
		a = consumo * 0.55
	elif(tipo == "I" and consumo > 5000):
		a = consumo * 0.60
else:
	a = "Invalido"


-- OUTPUT:
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:57:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")

	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 25, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:57:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalid
-- ERROR:
File "XXXX", line 22
    print("Dados invalid
                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:57:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:57:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:57:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:57:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:57:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:59:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if(tipo == "R" or tipo == "I" or tipo == "C" and consumo > 0):
	if(tipo == "R" and consumo > 0 and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:11:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if((tipo == "R" or tipo == "I" or tipo == "C") and (consumo > 0)):
	if(tipo == "R" and consumo > 0 and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 01:13:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if((tipo == "R" or tipo == "I" or tipo == "C") and (consumo > 0)):
	if(tipo == "R" and consumo > 0 and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.144179
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 01:13:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if((tipo == "R" or tipo == "I" or tipo == "C") and (consumo > 0)):
	if(tipo == "R" and consumo > 0 and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.164897
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 01:14:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if((tipo == "R" or tipo == "I" or tipo == "C") and (consumo > 0)):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.124375
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:14:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if((tipo == "R" or tipo == "I" or tipo == "C") and (consumo > 0)):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:16:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if((tipo == "R" or tipo == "I" or tipo == "C") and (consumo > 0)):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", consumo * 0.44)
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", consumo * 0.65)
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", consumo * 0.60)
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", consumo * 0.55)
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", consumo * 0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:18:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if((tipo == "R" or tipo == "I" or tipo == "C") and (consumo > 0)):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", round(consumo * 0.44, 2))
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", round(consumo * 0.65,2))
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", round (consumo * 0.55,2))
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", round(consumo * 0.60,2))
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", round(consumo * 0.55,2))
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", round(consumo * 0.60,))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:19:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if((tipo == "R" or tipo == "I" or tipo == "C") and (consumo > 0)):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", round(consumo * 0.44, 2))
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", round(consumo * 0.65,2))
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", round (consumo * 0.55,2))
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", round(consumo * 0.60,2))
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", round(consumo * 0.55,2))
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", round(consumo * 0.60,))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 01:20:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("Digite o consumo de energia (em kWh): "))
tipo = input("Tipo de instalacao: ")
print("Entradas:", consumo,"kWh e tipo", tipo)
if((tipo == "R" or tipo == "I" or tipo == "C") and (consumo > 0)):
	if(tipo == "R" and consumo <= 500):
		print("Valor total: R$", round(consumo * 0.44, 2))
	elif(tipo == "R" and consumo > 500):
		print("Valor total: R$", round(consumo * 0.65,2))
	elif(tipo == "C" and consumo <= 1000):
		print("Valor total: R$", round (consumo * 0.55,2))
	elif(tipo == "C" and consumo > 1000):
		print("Valor total: R$", round(consumo * 0.60,2))
	elif(tipo == "I" and consumo <= 5000):
		print("Valor total: R$", round(consumo * 0.55,2))
	elif(tipo == "I" and consumo > 5000):
		print("Valor total: R$:", round(consumo * 0.60,))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.134641
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
